--- a/packages/konux-app/package.json
+++ b/packages/konux-app/package.json
@@ -40,6 +40,13 @@
     "@storybook/react": "^5.0.7",
     "@types/styled-components": "^4.1.14",
     "babel-loader": "^8.0.5",
+    "husky": "^1.3.1",
     "prettier": "^1.17.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run prettier:write && yarn test",
+      "pre-push": "yarn test"
+    }
   }
 }
