--- a/packages/konux-app/package.json
+++ b/packages/konux-app/package.json
@@ -43,5 +43,11 @@
     "babel-loader": "^8.0.5",
     "husky": "^1.3.1",
     "prettier": "^1.17.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run prettify && yarn run test",
+      "pre-push": "yarn test"
+    }
   }
 }
