--- a/packages/konux-app/package.json
+++ b/packages/konux-app/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.4",
-    "@types/react": "16.8.13",
-    "@types/react-dom": "16.8.4",
+    "@types/d3": "^5.7.2",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
     "d3": "^5.9.2",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "storybook": "^1.0.0",
     "styled-components": "^4.2.0",
-    "typescript": "3.4.3"
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
