--- a/packages/konux-app/package.json
+++ b/packages/konux-app/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "axios": "^0.18.0",
     "d3": "^5.9.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
