--- a/packages/konux-app/package.json
+++ b/packages/konux-app/package.json
@@ -7,11 +7,13 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
+    "@types/react-datepicker": "^2.2.1",
     "@types/react-dom": "^16.8.4",
     "axios": "^0.18.0",
     "d3": "^5.9.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "storybook": "^1.0.0",
